[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "passive-subenum"
version = "1.0.0"
description = "Passive subdomain enumeration tool without API keys"
authors = [{ name = "Your Name" }]
dependencies = ["aiohttp>=3.8.0"]
requires-python = ">=3.8"

[project.scripts]
passive-subenum = "passive_subenum.cli:main"
